k8s/common/gateway.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gxlb-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
    - host: ""
      http:
        paths:
          - path: /ui
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 80
          - path: /accounts
            pathType: Prefix
            backend:
              service:
                name: account-svc
                port:
                  number: 80
          - path: /catalogs
            pathType: Prefix
            backend:
              service:
                name: catalog-svc
                port:
                  number: 80
          - path: /notifications
            pathType: Prefix
            backend:
              service:
                name: notification-svc
                port:
                  number: 80
          - path: /reservation
            pathType: Prefix
            backend:
              service:
                name: reservation-svc
                port:
                  number: 80
          - path: /search
            pathType: Prefix
            backend:
              service:
                name: search-svc
                port:
                  number: 80
